fixed nav scrolling on y-overflow

--- a/app/views/impulse/assets/css/main.css
+++ b/app/views/impulse/assets/css/main.css
@@ -103,6 +103,7 @@ a.anchor {
     box-shadow: 1px 0 5px 0 rgba(0,0,0,.1);
     top: 0;
     left: 0;
+    height: 100%;
     width: 270px;
     padding: 79px 15px 0 15px;
     border-right: 1px solid #ccc;
